# ltlf2asp

./: .pre-commit-config.yaml  LICENSE  README.md  parse.py  pyproject.toml  weltlf.lp
.github/workflows/: cicd.yml
.hooks/: commit-msg  pre-commit
cicd-scripts/: cut-release-branch.sh  ntfy-failure.sh  ntfy-start.sh  ntfy-success.sh
ltlf2asp/: api.py  cli.py  constants.py  exceptions.py  grammar.lark  parser.py  reify.py
ltlf2asp/parser/: __init__.py  grammar.lark  parser.py  reify_as_atoms.py  reify_as_object.py  reify_interface.py  syntax.py
ltlf2asp/solve/: __init__.py  check_model.py  decode_model.py  hybrid_solve.py  incremental.py  incremental_solve_loop.py  parse_trace.py  solver_interface.py  static_solve_loop.py  tableaux.py
ltlf2asp/solve/encodings/: check_trace.lp  incremental.lp  reynolds.lp  semantics.lp  solve_incremental.lp  solve_static.lp
scripts/: cut-release-branch.sh  tag.sh
tests/: test_discovery.py  test_grammar.py  test_idpool.py  test_parser.py
tests/test_parser/: reify_as_object.py  reify_as_object_lib.py  syntax.py  test_grammar.py
tests/test_reynolds/: test_easy.py  test_sanity_handwritten.py  test_sat.py  test_unsat.py
tests/test_solve/: fix_spot_formulas.py  formulas.txt  test_coherence_on_random_sample.py
tests/test_solve_random_sample/: formulas.txt  spot.txt
